Mon 08 Apr 2019 03:06:05 PM CEST
	Fix close() checks as suggested by MK on the mailinglist
        (#3926). -MK/CG
Wed 20 Mar 2019 10:20:24 AM CET
	Adding additional "value_length" argument to MHD_KeyValueIterator
	callback to support binary zeros in values.  This is done in a
	backwards-compatible way, but may require adding a cast to existing
	code to avoid a compiler warning. -CG

Sun Feb 10 21:00:37 BRT 2019
	Added example for how to compress a chunked HTTP response. -SC

Sun 10 Feb 2019 05:03:44 PM CET
	Releasing libmicrohttpd 0.9.63. -CG

Sat 09 Feb 2019 01:51:02 PM CET
	Extended test_get to test URI logging and query string parsing
	to avoid regression fixed in previous patch in the future. -CG

Thu Feb  7 16:16:12 CET 2019
	Preliminary patch for the raw query string issue, to be tested. -CG

Tue Jan  8 02:57:21 BRT 2019
	Added minimal example for how to compress HTTP response. -SC

Wed Dec 19 00:06:03 CET 2018
	Check for GNUTLS_E_AGAIN instead of GNUTLS_E_INTERRUPTED when
	giving up on a TLS connection. -LM/CG

Thu Dec 13 22:48:14 CET 2018
	Fix connection timeout logic if in thread-per-connection mode the
	working thread takes longer than the timeout to queue the response. -CG

Tue Dec 11 09:58:32 CET 2018
	Add logic to avoid VLA arrays with compilers that do not support them. -CG

Sat Dec  8 23:15:53 CET 2018
	Fixed missing WSA_FLAG_OVERLAPPED which can cause W32 to block on
	socket races when using threadpool. (See very detailed description
	of the issue in the libmicrohttpd mailinglist post of today.) -JM

Sat Dec  8 22:53:56 CET 2018
	Added test for RFC 7616 and documented new API.
	Releasing libmicrohttpd 0.9.62. -CG

Sat Dec  8 17:34:58 CET 2018
	Adding support for RFC 7616, experimental, needs
	testing and documentation still! -CG

Fri Dec  7 12:37:17 CET 2018
	Add option to build MHD without any threads
	and MHD_FEATURE_THREADS to test for it.  -CG

Thu Dec  6 13:25:08 BRT 2018
	Renamed all occurrences from _model(s)_ to _mode(s)_. -SC
