@@ -1,3 +1,7 @@
+Mon 15 Apr 2019 05:33:52 PM CEST
+	Add MHD_USE_POST_HANDSHAKE_AUTH_SUPPORT and
+	MHD_USE_INSECURE_TLS_EARLY_DATA flags. -CG
+
 Mon 08 Apr 2019 03:06:05 PM CEST
 	Fix close() checks as suggested by MK on the mailinglist
         (#3926). -MK/CG
